@@ -26,9 +26,21 @@ NOTE: 如果未定义存储类、则集群将显示需要执行操作。双击Ca
 .步骤
 . 从"画布"中、将Kubernetes工作环境拖放到Cloud Volumes ONTAP 或Amazon FSx for ONTAP 工作环境中、以打开存储类向导。
 . 提供存储类的名称。
-. 选择*文件系统*或*块*存储。对于*块*存储、选择文件系统类型(fstype)。
+. 选择*文件系统*或*块*存储。
 +
-image:screenshot-k8s-storage-fstypes.png["显示配置K8s存储类时块存储的fstype选项的屏幕截图。"]
+.. 对于*块*存储、选择文件系统类型(fstype)
++
+image:screenshot-k8s-storage-fstype.png["显示配置K8s存储类时块存储的fstype选项的屏幕截图。"]
+
+.. 对于*块*或*文件系统*存储、您可以选择启用存储类经济性。
++
+image:screenshot-k8s-storage-economy.png["显示配置块或文件K8s存储类时存储经济性选项的屏幕截图。"]
+
++
+
+NOTE: 使用存储类经济模式时、不支持备份和还原。
+
+
 
 . 选择卷扩展、卷绑定和默认存储类选项。单击 * 下一步 * 。
 . 选择要连接到集群的工作环境。单击 * 添加 * 。
